--- a/culture_tourism/templates/base-for-common.html
+++ b/culture_tourism/templates/base-for-common.html
@@ -254,11 +254,11 @@
                             </table>
                         </div>
                     </div>
-                    <div class="widget add wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="widget add wow fadeInUp" id="random" data-wow-delay="0.6s">
                         <h2>{% trans 'TAGS' %}</h2>
                         {% for tag in all_tags %}
                             {#                            TODO: make random numbers#}
-                            <a href="#" style="font-size:{{ random }}px;">{{ tag }}</a>
+                            <a href="#">{{ tag }}</a>
                         {% endfor %}
                     </div>
                     <div class="widget wow fadeInUp" data-wow-delay="0.6s">
@@ -396,9 +396,17 @@
 
 <span id="back-top" class="fa fa-arrow-up"></span>
 
+<script>
+function randomNumberGenerator(min,max)
+{
+return Math.floor(Math.random()*(max-min+1)+min);
+}
+</script>
+
 <script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/plugins.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/functions.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/randomize.js' %}"></script>
 <script type="text/javascript">
     if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
         var msViewportStyle = document.createElement('style')
