--- a/templates/small-text-adiblar.html
+++ b/templates/small-text-adiblar.html
@@ -29,7 +29,7 @@
 
                             <div class="txt">
                                 <h2>{{ content.name }}</h2>
-                                <p>{{ content.body|description:200|safe }}</p>
+                                <p>{{ content.description|truncatechars:200|safe }}</p>
                                 <a class="more" href="{% url 'uznation:small_adib' pk=content.pk %}">
                                     <span>{% trans 'MORE' %}</span>
                                     <i class="icon-right-thin"></i>
