--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -9,7 +9,7 @@
                 <h3>{% trans 'The aim of creating this website' %}</h3>
 
                 <p>{% blocktrans %}This website is made to share some useful information about Uzbek nationality and
-                    traditions. <b><em>Uznations.inha.uz</em></b>
+                    traditions. <b><em>Uznations.iutlab.uz</em></b>
                     is always ready to give help for users, volunteers, local people so that they can easily
                     get useful information on Uzbekistan and its nationality. In this
                     website, there could be found a great amount of useful information, collections of amazing
@@ -56,7 +56,7 @@
                     department of Information and Communication Engineering (ICE). We are glad to say thanks for
                     the websites which agreed working with us and thus, our site used their useful information as an
                     extra source. Other special thanks are for<b><em> Voriskhon</em></b> for making amazing logo for
-                    <b>Uznations.inha.uz</b>{% endblocktrans %}</p>
+                    <b>Uznations.iutlab.uz</b>{% endblocktrans %}</p>
             </div>
         </div>
 {% endblock %}
