--- a/culture_tourism/templates/base.html
+++ b/culture_tourism/templates/base.html
@@ -144,7 +144,7 @@
                 <div class="holder">
                     <strong class="logo-footer">
                         <a href="#">
-                            <i class="icon">UzNation</i>
+                            <i class="icon">UzNations</i>
                         </a>
                     </strong>
 
@@ -232,7 +232,7 @@
 
                     {% endfor %}
                 </ul>
-                <span class="copyright"><a href="{% url 'uznation:home' %}">UzNation</a> &copy;
+                <span class="copyright"><a href="{% url 'uznation:home' %}">UzNations</a> &copy;
                     2016. {% trans 'All rights reserved' %}.</span>
             </div>
 
