--- a/templates/galleriya.html
+++ b/templates/galleriya.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common.html' %}
 {% load i18n %}
-{% block title %}UzNation | {% trans 'Gallery' %}{% endblock %}
+{% block title %}UzNations | {% trans 'Gallery' %}{% endblock %}
 
 {% block main-row-div-1 %}
         {% for menu in menus %}
