--- a/templates/kutubxona.html
+++ b/templates/kutubxona.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common-right.html' %}
 {% load i18n %}
-{% block title %}UzNation {% trans 'Library' %}{% endblock %}
+{% block title %}UzNations {% trans 'Library' %}{% endblock %}
 
 {% block main-row-div-1 %}
     {% for library in libraries %}
