--- a/templates/maqol.html
+++ b/templates/maqol.html
@@ -1,7 +1,7 @@
 {% extends 'base-for-common.html' %}
 {% load staticfiles tree_tags i18n %}
 
-{% block title %}UzNation | {% trans 'Proverbs' %}{% endblock %}
+{% block title %}UzNations | {% trans 'Proverbs' %}{% endblock %}
 
 {% block main-row-div-1 %}
         <!-- gallery -->
