--- a/templates/news.html
+++ b/templates/news.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common.html' %}
 {% load i18n %}
-{% block title %}UzNation | {% trans 'News' %}{% endblock %}
+{% block title %}UzNations | {% trans 'News' %}{% endblock %}
 
 {% block main-row-div-1 %}
     <h2>{{ content.news_title }}</h2>
