--- a/templates/regions.html
+++ b/templates/regions.html
@@ -1,7 +1,7 @@
-{% extends 'base-for-common.html' %}
+{% extends 'base-for-common-right.html' %}
 {% load i18n %}
 {% load thumbnail %}
-{% block title %}UzNation | {% trans 'Regions' %}{% endblock %}
+{% block title %}UzNations | {% trans 'Regions' %}{% endblock %}
 
 {% block main-row-div-1 %}
         <div class="article-holder">
