--- a/templates/small-text.html
+++ b/templates/small-text.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common-right.html' %}
 {% load i18n %}
-{% block title %}UzNation{% endblock %}
+{% block title %}UzNations{% endblock %}
 
 {% block main-row-div-1 %}
         <div class="article-holder">
