--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1068,7 +1068,10 @@ select,
 textarea {
   font-family: inherit;
   font-size: inherit;
-  line-height: inherit; }
+  line-height: inherit;
+  width: 100%;
+  position: relative;
+}
 
 a {
   color: #252525;
