--- a/culture_tourism/templates/base-for-common-right.html
+++ b/culture_tourism/templates/base-for-common-right.html
@@ -251,10 +251,9 @@
                             </table>
                         </div>
                     </div>
-                    <div class="widget add wow fadeInUp" data-wow-delay="0.6s">
+                    <div class="widget add wow fadeInUp" id="random" data-wow-delay="0.6s">
                         <h2>{% trans 'TAGS' %}</h2>
                         {% for tag in all_tags %}
-                            {#                            TODO: make random numbers#}
                             <a href="#">{{ tag }}</a>
                         {% endfor %}
                     </div>
@@ -295,7 +294,7 @@
                 <div class="holder">
                     <strong class="logo-footer">
                         <a href="#">
-                            <i class="icon">UzNation</i>
+                            <i class="icon">UzNations</i>
                         </a>
                     </strong>
                     <!-- footer-txt -->
@@ -383,7 +382,7 @@
 
                     {% endfor %}
                 </ul>
-                <span class="copyright"><a href="{% url 'uznation:home' %}">UzNation</a> &copy;
+                <span class="copyright"><a href="{% url 'uznation:home' %}">UzNations</a> &copy;
                     2016. {% trans 'All rights reserved' %}.</span>
             </div>
 
