--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common.html' %}
 {% load staticfiles i18n %}
-{% block title %}UzNation | {% trans 'About Us' %}{% endblock %}
+{% block title %}UzNations | {% trans 'About Us' %}{% endblock %}
 {% block main-row-div-1 %}
         <!-- post -->
         <div class="post wow fadeInUp" data-wow-delay="0.6s">
