--- a/templates/small-text-for-tales.html
+++ b/templates/small-text-for-tales.html
@@ -1,6 +1,6 @@
 {% extends 'base-for-common-right.html' %}
 {% load i18n %}
-{% block title %}UzNation {% trans 'Tales' %}{% endblock %}
+{% block title %}UzNations {% trans 'Tales' %}{% endblock %}
 
 {% block main-row-div-1 %}
     <div class="article-holder">
