changes at static files

--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -1220,7 +1220,9 @@ h6, .h6 {
 
 p {
   margin: 16 8 10px;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+width: 90%
+}
 
 .lead {
   margin-bottom: 20px;
