--- a/culture_tourism/templates/base-for-common.html
+++ b/culture_tourism/templates/base-for-common.html
@@ -27,9 +27,15 @@
 
     <link rel="shortcut icon" href="{% static 'Lagan.png' %}">
 
-    <script type="text/javascript">var switchTo5x=true;</script>
-    <script type="text/javascript" id="st_insights_js" src="http://w.sharethis.com/button/buttons.js?publisher=193586d1-c743-4371-93fd-81aa1f8f5746"></script>
-    <script type="text/javascript">stLight.options({publisher: "193586d1-c743-4371-93fd-81aa1f8f5746", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
+    <script type="text/javascript">var switchTo5x = true;</script>
+    <script type="text/javascript" id="st_insights_js"
+            src="http://w.sharethis.com/button/buttons.js?publisher=193586d1-c743-4371-93fd-81aa1f8f5746"></script>
+    <script type="text/javascript">stLight.options({
+        publisher: "193586d1-c743-4371-93fd-81aa1f8f5746",
+        doNotHash: false,
+        doNotCopy: false,
+        hashAddressBar: false
+    });</script>
 
 </head>
 
@@ -282,9 +288,7 @@
                     <div class="widget wow fadeInUp" data-wow-delay="0.6s"
                          style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
                         <h2>{% trans 'TIME IN UZBEKISTAN' %}</h2>
-                        <div class="tags">
-                            <h2>{{ clock|date:'H : i' }}</h2>
-                        </div>
+                        <div id="clockDisplay" class="clockStyle"></div>
                     </div>
                 </div>
             </div>
@@ -395,10 +399,9 @@
 <span id="back-top" class="fa fa-arrow-up"></span>
 
 <script>
-function randomNumberGenerator(min,max)
-{
-return Math.floor(Math.random()*(max-min+1)+min);
-}
+    function randomNumberGenerator(min, max) {
+        return Math.floor(Math.random() * (max - min + 1) + min);
+    }
 </script>
 
 <script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
@@ -457,6 +460,35 @@ return Math.floor(Math.random()*(max-min+1)+min);
     document.querySelector('#calendar2 thead tr:nth-child(1) td:nth-child(3)').onclick = function () {
         Calendar2("calendar2", document.querySelector('#calendar2 thead td:nth-child(2)').dataset.year, parseFloat(document.querySelector('#calendar2 thead td:nth-child(2)').dataset.month) + 1);
     }
+
+    function renderTime() {
+        var currentTime = new Date();
+        var h = currentTime.getHours();
+        var m = currentTime.getMinutes();
+        var s = currentTime.getSeconds();
+        if (h == 0) {
+            h = 12;
+        }
+        else if (h > 12) {
+            h = h - 12;
+        }
+        if (h < 10) {
+            h = "0" + h;
+        }
+        if (m < 10) {
+            m = "0" + m;
+        }
+        if (s < 10) {
+            s = "0" + s;
+        }
+
+        var myClock = document.getElementById('clockDisplay');
+        myClock.textContent = h + ":" + m + ":" + s;
+        setTimeout('renderTime()', 1000);
+        setTimeout('renderTime()', 1000);
+    }
+    renderTime();
+
 </script>
 
 </body>
