--- a/templates/index.html
+++ b/templates/index.html
@@ -295,7 +295,7 @@
                                                     </blockquote>
                                                     <div class="images">
                                                         <img src="{{ t.photo|thumbnail_url:'turism' }}"
-                                                             alt="image description" style="height:502px">
+                                                             alt="image description">
                                                     </div>
                                                 </div>
                                             {% endfor %}
