--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load thumbnail %}
 {% load i18n %}
-{% block title %}UzNations{% endblock %}
+{% block title %}NEW UzNations{% endblock %}
 {% block main %}
     <main id="main">
         <!-- visual -->
